# CoppeliaSimExtensionXbox360Controller

./: CMakeLists.txt  README.md
scene/: controlledViaXboxController.ttt
src/: v_repExtXbox360Controller.cpp  v_repExtXbox360Controller.h
